--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<img src="images/bismillah.svg" alt="" style="margin-bottom: 20px">
-					<h2>Assalamu'alaikum Wr. Wb.</h2>
+					<h2>Com grande alegria</h2>
 					<p style="color: #bf9b73">Convidamos você e sua família para celebrar o nosso casamento:</p>
 				</div>
 			</div>
