corrige icone play musica

--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
 	}
 
 	function togglePlayButton1(play) {
-		document.getElementById("youtube-icon1").src = play ? "images/audio/pause.png" : "images/audio/play.png";
+		document.getElementById("youtube-icon1").src = play ? "https://rafaelganzer.github.io/rafael-e-joyce/images/audio/pause.png" : "https://rafaelganzer.github.io/rafael-e-joyce/images/audio/play.png";
 	}
 
 	function toggleAudio1() {
